// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppDownloadDialog should allow disabling desktop build 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_AppDownloadDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header mx_Dialog_headerWithCancel"
    >
      <h2
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Download Element
      </h2>
      <div
        aria-label="Close dialog"
        class="mx_AccessibleButton mx_Dialog_cancelButton"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="mx_AppDownloadDialog_mobile"
    >
      <div
        class="mx_AppDownloadDialog_app"
      >
        <h3
          class="mx_Heading_h3"
        >
          iOS
        </h3>
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <div
          class="mx_AppDownloadDialog_info"
        >
           or 
        </div>
        <div
          class="mx_AppDownloadDialog_links"
        >
          <a
            aria-label="Download on the App Store"
            class="mx_AccessibleButton"
            href="https://apps.apple.com/app/vector/id1083446067"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <div />
          </a>
        </div>
      </div>
      <div
        class="mx_AppDownloadDialog_app"
      >
        <h3
          class="mx_Heading_h3"
        >
          Android
        </h3>
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <div
          class="mx_AppDownloadDialog_info"
        >
           or 
        </div>
        <div
          class="mx_AppDownloadDialog_links"
        >
          <a
            aria-label="Get it on Google Play"
            class="mx_AccessibleButton"
            href="https://play.google.com/store/apps/details?id=im.vector.app"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <div />
          </a>
          <a
            aria-label="Get it on F-Droid"
            class="mx_AccessibleButton"
            href="https://f-droid.org/repository/browse/?fdid=im.vector.app"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <div />
          </a>
        </div>
      </div>
    </div>
    <div
      class="mx_AppDownloadDialog_legal"
    >
      <p>
        App Store® and the Apple logo® are trademarks of Apple Inc.
      </p>
      <p>
        Google Play and the Google Play logo are trademarks of Google LLC.
      </p>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`AppDownloadDialog should allow disabling fdroid build 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_AppDownloadDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header mx_Dialog_headerWithCancel"
    >
      <h2
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Download Element
      </h2>
      <div
        aria-label="Close dialog"
        class="mx_AccessibleButton mx_Dialog_cancelButton"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="mx_AppDownloadDialog_desktop"
    >
      <h3
        class="mx_Heading_h3"
      >
        Download Element Desktop
      </h3>
      <a
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
        href="https://element.io/download"
        role="button"
        tabindex="0"
        target="_blank"
      >
        Download Element Desktop
      </a>
    </div>
    <div
      class="mx_AppDownloadDialog_mobile"
    >
      <div
        class="mx_AppDownloadDialog_app"
      >
        <h3
          class="mx_Heading_h3"
        >
          iOS
        </h3>
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <div
          class="mx_AppDownloadDialog_info"
        >
           or 
        </div>
        <div
          class="mx_AppDownloadDialog_links"
        >
          <a
            aria-label="Download on the App Store"
            class="mx_AccessibleButton"
            href="https://apps.apple.com/app/vector/id1083446067"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <div />
          </a>
        </div>
      </div>
      <div
        class="mx_AppDownloadDialog_app"
      >
        <h3
          class="mx_Heading_h3"
        >
          Android
        </h3>
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <div
          class="mx_AppDownloadDialog_info"
        >
           or 
        </div>
        <div
          class="mx_AppDownloadDialog_links"
        >
          <a
            aria-label="Get it on Google Play"
            class="mx_AccessibleButton"
            href="https://play.google.com/store/apps/details?id=im.vector.app"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <div />
          </a>
        </div>
      </div>
    </div>
    <div
      class="mx_AppDownloadDialog_legal"
    >
      <p>
        App Store® and the Apple logo® are trademarks of Apple Inc.
      </p>
      <p>
        Google Play and the Google Play logo are trademarks of Google LLC.
      </p>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`AppDownloadDialog should allow disabling mobile builds 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_AppDownloadDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header mx_Dialog_headerWithCancel"
    >
      <h2
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Download Element
      </h2>
      <div
        aria-label="Close dialog"
        class="mx_AccessibleButton mx_Dialog_cancelButton"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="mx_AppDownloadDialog_desktop"
    >
      <h3
        class="mx_Heading_h3"
      >
        Download Element Desktop
      </h3>
      <a
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
        href="https://element.io/download"
        role="button"
        tabindex="0"
        target="_blank"
      >
        Download Element Desktop
      </a>
    </div>
    <div
      class="mx_AppDownloadDialog_mobile"
    />
    <div
      class="mx_AppDownloadDialog_legal"
    >
      <p>
        App Store® and the Apple logo® are trademarks of Apple Inc.
      </p>
      <p>
        Google Play and the Google Play logo are trademarks of Google LLC.
      </p>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;

exports[`AppDownloadDialog should render with desktop, ios, android, fdroid buttons by default 1`] = `
<DocumentFragment>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-labelledby="mx_BaseDialog_title"
    class="mx_AppDownloadDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header mx_Dialog_headerWithCancel"
    >
      <h2
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Download Element
      </h2>
      <div
        aria-label="Close dialog"
        class="mx_AccessibleButton mx_Dialog_cancelButton"
        role="button"
        tabindex="0"
      />
    </div>
    <div
      class="mx_AppDownloadDialog_desktop"
    >
      <h3
        class="mx_Heading_h3"
      >
        Download Element Desktop
      </h3>
      <a
        class="mx_AccessibleButton mx_AccessibleButton_hasKind mx_AccessibleButton_kind_primary"
        href="https://element.io/download"
        role="button"
        tabindex="0"
        target="_blank"
      >
        Download Element Desktop
      </a>
    </div>
    <div
      class="mx_AppDownloadDialog_mobile"
    >
      <div
        class="mx_AppDownloadDialog_app"
      >
        <h3
          class="mx_Heading_h3"
        >
          iOS
        </h3>
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <div
          class="mx_AppDownloadDialog_info"
        >
           or 
        </div>
        <div
          class="mx_AppDownloadDialog_links"
        >
          <a
            aria-label="Download on the App Store"
            class="mx_AccessibleButton"
            href="https://apps.apple.com/app/vector/id1083446067"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <div />
          </a>
        </div>
      </div>
      <div
        class="mx_AppDownloadDialog_app"
      >
        <h3
          class="mx_Heading_h3"
        >
          Android
        </h3>
        <div
          class="mx_QRCode"
        >
          <div
            class="mx_Spinner"
          >
            <div
              aria-label="Loading…"
              class="mx_Spinner_icon"
              data-testid="spinner"
              role="progressbar"
              style="width: 32px; height: 32px;"
            />
          </div>
        </div>
        <div
          class="mx_AppDownloadDialog_info"
        >
           or 
        </div>
        <div
          class="mx_AppDownloadDialog_links"
        >
          <a
            aria-label="Get it on Google Play"
            class="mx_AccessibleButton"
            href="https://play.google.com/store/apps/details?id=im.vector.app"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <div />
          </a>
          <a
            aria-label="Get it on F-Droid"
            class="mx_AccessibleButton"
            href="https://f-droid.org/repository/browse/?fdid=im.vector.app"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <div />
          </a>
        </div>
      </div>
    </div>
    <div
      class="mx_AppDownloadDialog_legal"
    >
      <p>
        App Store® and the Apple logo® are trademarks of Apple Inc.
      </p>
      <p>
        Google Play and the Google Play logo are trademarks of Google LLC.
      </p>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</DocumentFragment>
`;
